--- a/analysis_python/Engine Analysis-Copy1.ipynb
+++ b/analysis_python/Engine Analysis-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "1dd83032",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "7be32d12",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
     "    prop_floor = np.array([isa[isa['Elevation'] == h_floor].Temperature, isa[isa['Elevation'] == h_floor].Pressure, isa[isa['Elevation'] == h_floor]['Relative Density']])\n",
     "    prop_ceil = np.array([isa[isa['Elevation'] == h_ceil].Temperature, isa[isa['Elevation'] == h_ceil].Pressure, isa[isa['Elevation'] == h_ceil]['Relative Density']])\n",
     "    prop = prop_floor + (prop_ceil - prop_floor)*(diff/500)\n",
-    "    prop[1] *= 1e5\n",
+    "    prop[1] *= 10e5\n",
     "    prop[2] *= 1.2985\n",
     "    return prop"
    ]
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "1c9d77c1",
    "metadata": {},
    "outputs": [],
@@ -84,12 +84,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "id": "dd6a6c84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cruise_alt = 15000\n",
+    "cruise_alt = 1000\n",
     "cruise_mach_no = 1.5\n",
     "alpha = 0.3\n",
     "T0, p0, rho0 = calculate_atm_params(cruise_alt)\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "id": "246e400b",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mass Flow Rate:  98.266 kg/s\n"
+      "Mass Flow Rate:  639.463 kg/s\n"
      ]
     }
    ],
@@ -136,53 +136,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "id": "d0c029c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_d = 0.9"
+    "n_d = 0.9\n",
+    "prf = 0.95"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "id": "8dd03326",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.2875103959004863"
-      ]
-     },
-     "execution_count": 134,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(1 + (n_d*(gamma - 1)*M0**2/2))**(gamma/(gamma-1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 10,
    "id": "49fa37ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def inlet(M0, p0, T0, n_d):\n",
-    "    pi_d = (1 + (n_d*(gamma - 1)*M0**2/2))**(gamma/(gamma-1))\n",
-    "    p_t1 = p0*pi_d\n",
-    "    T_t0 = T0*(1 + (((gamma - 1)/2)*M0*M0))\n",
+    "def inlet(M0, p0, T0, n_d, prf):\n",
+    "    p_t0 = p0*((1 + ((gamma-1)/2)*M0**2)**(gamma/(gamma-1)))\n",
+    "    p_t1 = 0.95*p_t0\n",
+    "    pi_d = p_t1/p0\n",
+    "    tau_r = 1 + (((pi_d**((gamma-1)/gamma)) - 1)/n_d)\n",
+    "    T_t0 = tau_r*T0\n",
     "    T_t1 = T_t0\n",
     "    return p_t1, T_t1, pi_d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 11,
    "id": "65efaa76",
    "metadata": {},
    "outputs": [
@@ -190,27 +172,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Compressor Inlet Total Pressure: 0.040 bar\n",
-      "Compressor Inlet Total Temperature: 314.215 K\n"
+      "Compressor Inlet Total Pressure: 3.135 bar\n",
+      "Compressor Inlet Total Temperature: 415.947 K\n"
      ]
     }
    ],
    "source": [
-    "p_t1, T_t1, pi_d = inlet(M0, p0, T0, n_d)\n",
+    "p_t1, T_t1, pi_d = inlet(M0, p0, T0, n_d, prf)\n",
     "print(f\"Compressor Inlet Total Pressure:\", \"{0:.3f}\".format(p_t1[0]/10e5), \"bar\")\n",
     "print(f\"Compressor Inlet Total Temperature:\", \"{0:.3f}\".format(T_t1[0]), \"K\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 12,
    "id": "69778582",
    "metadata": {},
    "outputs": [],
    "source": [
     "def compressor(p_t0, T_t0, n_c, pi_c):\n",
-    "    T_t1 = T_t0*(1+((pi_c**((gamma-1)/gamma) - 1)/n_c))\n",
-    "    p_t1 = p_t0*pi_c\n",
+    "    tau_c = 1 + (((pi_c)**((gamma-1)/gamma) - 1)/n_c)\n",
+    "    p_t1 = pi_c*p_t0\n",
+    "    T_t1 = tau_c*T_t0\n",
     "    return p_t1, T_t1"
    ]
   },
@@ -224,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 13,
    "id": "af82161b",
    "metadata": {},
    "outputs": [],
@@ -235,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 14,
    "id": "f8c21786",
    "metadata": {},
    "outputs": [
@@ -243,8 +226,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "High Pressure Compressor Inlet Total Pressure: 0.119 bar\n",
-      "High Pressure Compressor Inlet Total Temperature: 450.524 K\n"
+      "High Pressure Compressor Inlet Total Pressure: 9.404 bar\n",
+      "High Pressure Compressor Inlet Total Temperature: 596.389 K\n"
      ]
     }
    ],
@@ -264,18 +247,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 15,
    "id": "844227d9",
    "metadata": {},
    "outputs": [],
    "source": [
     "n_c_h = 0.9\n",
-    "pi_c_h = 26.8/3"
+    "pi_c_h = 25/3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 16,
    "id": "a9f3d801",
    "metadata": {},
    "outputs": [
@@ -283,14 +266,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Burner Inlet Total Pressure: 10.670 bar\n",
-      "Burner Inlet Total Temperature: 885.765 K\n"
+      "Burner Inlet Total Pressure: 78.364 bar\n",
+      "Burner Inlet Total Temperature: 1148.181 K\n"
      ]
     }
    ],
    "source": [
     "p_t3, T_t3 = compressor(p_t2, T_t2, n_c_h, pi_c_h)\n",
-    "print(f\"Burner Inlet Total Pressure:\", \"{0:.3f}\".format(p_t3[0]/1e5), \"bar\")\n",
+    "print(f\"Burner Inlet Total Pressure:\", \"{0:.3f}\".format(p_t3[0]/10e5), \"bar\")\n",
     "print(f\"Burner Inlet Total Temperature:\", \"{0:.3f}\".format(T_t3[0]), \"K\")"
    ]
   },
@@ -304,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 17,
    "id": "b8403c66",
    "metadata": {},
    "outputs": [],
@@ -317,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 18,
    "id": "0f0d46a3",
    "metadata": {},
    "outputs": [],
@@ -329,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 19,
    "id": "65b2a045",
    "metadata": {},
    "outputs": [
@@ -337,10 +320,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Turbine Inlet Total Pressure: 10.242767270099627 bar\n",
-      "Turbine Inlet Total Temperature: 1922.000 K\n",
-      "Rate of fuel burning: 0.235 kg/s\n",
-      "Fuel-to-Air ratio: 0.311 %\n"
+      "Rate of fuel burning: 1.224 kg/s\n",
+      "Fuel-to-Air ratio: 0.249 %\n"
      ]
     }
    ],
@@ -348,8 +329,6 @@
     "T_t4 = T_max\n",
     "p_t4 = (1 - press_loss) * p_t3\n",
     "m_f_dot = burner(p_t3, T_t3, Q_R, n_b, T_max)\n",
-    "print(f\"Turbine Inlet Total Pressure: {p_t4[0]/1e5} bar\")\n",
-    "print(f\"Turbine Inlet Total Temperature:\", \"{0:.3f}\".format(T_t4), \"K\")\n",
     "print(f\"Rate of fuel burning:\", \"{0:.3f}\".format(m_f_dot[0]), \"kg/s\")\n",
     "print(f\"Fuel-to-Air ratio:\", \"{0:.3f}\".format((m_f_dot[0]/m_dot_core[0])*100), \"%\")"
    ]
@@ -364,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 65,
    "id": "bcc49274",
    "metadata": {},
    "outputs": [],
@@ -374,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 66,
    "id": "099b0829",
    "metadata": {},
    "outputs": [],
@@ -388,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 67,
    "id": "c3755745",
    "metadata": {},
    "outputs": [
@@ -396,20 +375,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Low Pressure Turbine Inlet Temperature: 1499.859 K\n",
-      "Low Pressure Turbine Inlet Pressure: 4.244 bar\n"
+      "Low Pressure Turbine Inlet Temperature: 1387.799 K\n",
+      "Low Pressure Turbine Inlet Pressure: 23.784 bar\n"
      ]
     }
    ],
    "source": [
     "p_t5, T_t5 = turbine(p_t4, T_t4, n_t, T_t2, T_t3)\n",
     "print(f\"Low Pressure Turbine Inlet Temperature:\", \"{0:.3f}\".format(T_t5[0]), \"K\")\n",
-    "print(f\"Low Pressure Turbine Inlet Pressure:\", \"{0:.3f}\".format(p_t5[0]/1e5), \"bar\")"
+    "print(f\"Low Pressure Turbine Inlet Pressure:\", \"{0:.3f}\".format(p_t5[0]/10e5), \"bar\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 68,
    "id": "191a3a41",
    "metadata": {},
    "outputs": [
@@ -417,15 +396,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Low Pressure Turbine Exit Temperature: 1367.652 K\n",
-      "Low Pressure Turbine Exit Pressure: 3.050 bar\n"
+      "Low Pressure Turbine Exit Temperature: 1213.109 K\n",
+      "Low Pressure Turbine Exit Pressure: 14.704 bar\n"
      ]
     }
    ],
    "source": [
     "p_t6, T_t6 = turbine(p_t5, T_t5, n_t, T_t1, T_t2)\n",
     "print(f\"Low Pressure Turbine Exit Temperature:\", \"{0:.3f}\".format(T_t6[0]), \"K\")\n",
-    "print(f\"Low Pressure Turbine Exit Pressure:\", \"{0:.3f}\".format(p_t6[0]/1e5), \"bar\")"
+    "print(f\"Low Pressure Turbine Exit Pressure:\", \"{0:.3f}\".format(p_t6[0]/10e5), \"bar\")"
    ]
   },
   {
@@ -438,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 69,
    "id": "ee9196d4",
    "metadata": {},
    "outputs": [],
@@ -448,13 +427,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 70,
    "id": "b8367d01",
    "metadata": {},
    "outputs": [],
    "source": [
     "def nozzle(p_t0, T_t0, n_n, p_a, gamma):\n",
-    "    NPR = p_t0/p0[0]\n",
+    "    NPR = p_t6[0]/p0[0]\n",
     "    pi_n = ((NPR)**((gamma - 1)/gamma) - n_n*((NPR)**((gamma - 1)/gamma) - 1))**(-(gamma/(gamma - 1)))\n",
     "    p_t1 = p_t0 * pi_n\n",
     "    M = np.sqrt(((p_t1/p_a) - 1)*(2/(gamma - 1)))\n",
@@ -466,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 71,
    "id": "500df77e",
    "metadata": {},
    "outputs": [
@@ -474,7 +453,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exit jet velocity: 1715.259 m/s\n"
+      "Exit jet velocity: 1592.449 m/s\n"
      ]
     }
    ],
@@ -485,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 72,
    "id": "bca144e3",
    "metadata": {},
    "outputs": [
@@ -493,7 +472,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thrust generated by core: 96.595 kN\n"
+      "Thrust generated by core: 539.354 kN\n"
      ]
     }
    ],
@@ -512,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 73,
    "id": "176b4d5d",
    "metadata": {},
    "outputs": [],
@@ -522,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 74,
    "id": "3a9e0fe9",
    "metadata": {},
    "outputs": [
@@ -530,7 +509,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thrust generated by bypass: 11.396 kN\n"
+      "Thrust generated by bypass: 85.635 kN\n"
      ]
     }
    ],
@@ -541,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 75,
    "id": "3d11805d",
    "metadata": {},
    "outputs": [
@@ -549,7 +528,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Thrust generated by the engine: 107.992 kN\n"
+      "Total Thrust generated by the engine: 624.989 kN\n"
      ]
     }
    ],
@@ -557,106 +536,6 @@
     "thrust_total = thrust_bypass + thrust_core\n",
     "print(f\"Total Thrust generated by the engine:\", \"{0:.3f}\".format(thrust_total[0]/1e3), \"kN\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 213,
-   "id": "1701d3f7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TSFC: 2.1770181084482956 g/kN-s\n"
-     ]
-    }
-   ],
-   "source": [
-    "TSFC = m_f_dot/thrust_total\n",
-    "print(f\"TSFC: {TSFC[0]/1e-6} g/kN-s\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 198,
-   "id": "c6a2f934",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_prop = 2*thrust_core*v0/(v_j**2 - v0**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 199,
-   "id": "fe9258ee",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([31.14334533])"
-      ]
-     },
-     "execution_count": 199,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n_prop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 203,
-   "id": "5bbd4770",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([360050.30548644]), array([1169.94900542]))"
-      ]
-     },
-     "execution_count": 203,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "turbine(10.4e5, 1550, 0.95, 297.84, 711.454)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 204,
-   "id": "72bfd07f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([316732.74874359]), array([1131.10902954]))"
-      ]
-     },
-     "execution_count": 204,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "turbine(360050, 1169.949, 0.95, 255.57, 297.84)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41822a6b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
